--- a/style.css
+++ b/style.css
@@ -8,13 +8,15 @@ body{
 ul{
     list-style-type: none;
     display: flex;
-    gap: 16px;
+    gap: 20px;
+    margin: 0;
+    padding: 10px 0px;
 }
 
 header a{
     text-decoration: none;
-    color: white;
-    font-weight: bold;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 /* Header */
@@ -24,8 +26,17 @@ header{
     justify-content: space-between;
     align-items: center;
     color: white;
-    padding: 0px 100px;
+    padding: 10px 200px;
 }
+
+#logotext{
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: bolder;
+    margin: 0;
+}
+
+
 /* SubHeader */
 .header-left{
     width: 600px;
@@ -50,10 +61,9 @@ button{
 }
 
 .header-right img{
-    margin-top: 50px;
-    width: auto;
+    width: 400px;
     height: 200px;
-    padding-left: 50px;
+    margin-top: 90px;
 }
 
 #heromain{
@@ -62,6 +72,42 @@ button{
     font-weight: bold;
     margin-top: 100px;
 }
+
+#herotext{
+    font-size: 18px;
+    color: #E5E7EB;
+    padding-right: 50px;
+}
+
+/* Main Content */
+#information{
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    text-align: center;
+}
+
+.content-main{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    padding-top: 20px;
+    padding-bottom: 80px;
+}
+
+.box{
+    border: #3882F6 solid;
+    border-radius: 10px;
+    width: 150px;
+    height: 150px;
+}
+
+.content-text{
+    width: 150px;
+    text-align: center;
+}
+
 
 /* Footer */
 footer{
