--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ button{
     justify-content: center;
     gap: 50px;
     padding-top: 20px;
-    padding-bottom: 80px;
+    padding-bottom: 100px;
 }
 
 .box{
@@ -108,6 +108,31 @@ button{
     text-align: center;
 }
 
+/* Quote */
+.content-quote{
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding: 0px 250px;
+    padding-top: 100px;
+    padding-bottom: 80px;
+}
+
+.quote{
+    font-style: italic;
+    font-size: 36px;
+    font-weight: lighter;
+    color: #1F2937;
+    text-align: justify;
+}
+
+.who{
+    font-size: 20px;
+    font-weight: bolder;
+    margin-left: auto;
+    margin-right: 0px;
+    margin-top: -30px;
+}
 
 /* Footer */
 footer{
