--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+
 body{
     margin:0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Product Sans;
+    font-family: 'Lexend Deca', sans-serif;
 }
 
 ul{
